cmake_minimum_required(VERSION 3.12)
project(pdftoc)
set(MUPDF_INSTALL_PATH "/usr/local")
link_directories(${MUPDF_INSTALL_PATH}/lib)
include_directories(${MUPDF_INSTALL_PATH}/include)
set(SOURCES main.c)
add_executable(pdftoc ${SOURCES})
find_package(json-c CONFIG)
target_link_libraries(pdftoc mupdf mupdf-third m json-c::json-c)